Update 11.04. API´s ins Frontend eingebunden
