# lafftale-backend/app.js
@@ -16,9 +16,10 @@ app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // Deine API-Routen
 app.use("/api/auth", require("./routes/auth"));
-app.use("/api/users", require("./routes/users"));
-app.use("/api/tickets", require("./routes/tickets"));
 app.use("/api/admin", require("./routes/admin"));
+app.use("/api/users", require("./routes/users"));
+app.use("/api/admin_tickets", require("./routes/admin_tickets"));
+app.use("/api/user_tickets", require("./routes/user_tickets"));
 app.use("/api/donation", require("./routes/donation"));
 app.use("/api/rankings", require("./routes/rankings"));
 app.use("/api/characters", require("./routes/characters"));
